[ADD] Day 35 - Node.js 05

--- a/boot-camp/note/April/22_04_19_Tue.md
+++ b/boot-camp/note/April/22_04_19_Tue.md
@@ -2,13 +2,53 @@
 
 ## _Node.js_
 
--
+- mongodb
+  - mongodb compass 툴 이용
+  - json 구조와 비슷
+  - 크로스 플랫폼 document 지향의 DB 시스템
+  - 장점
+    - RDB에 비해 성능이 100배 이상 빠름
+    - 스키마 관리 필요없음
+  - 단점
+    - 복잡한 쿼리 사용 불가
+      - join 사용 불가
+    - 메모리 사용량 큰 편
+    - 데이터 일관성 보장 X
+      - 최근 ACID 도입 베타 릴리즈 진행중
+  - 보통 대용량 데이터 빠르게 저장하고 조회할 때 활용
+  - 몽고DB와 RDBMS 혼용해서 많이 사용
+  - Database - Collections - Documents - Fields
+  - record(document)에 자동으로 object의 \_id 추가됨
+  - 활용) 실시간 좌표를 빠르게 DB에 저장하고 조회할 때 mongoDB 활용 가능
+- mongoose
+  - mongoDB - JS ORM
+- forever
+  - 노드 서버 다운되면 다시 실행되도록 만듦 (실수 방지)
+  - forever start 파일이름
+  - forever list
+  - forever stop 파일이름
+  - forever stopall
+- api_server
+  - 외부 시스템에서 사용하기 위함
+    - ex. 개발자 키를 이용해서 사용하도록 하는 방식
+  - uuid-apikey 모듈
+- pm2
+  - node.js는 싱글 스레드 (하나의 프로세스만 사용)
+  - pm2 모듈
+    - 싱글 스레드의 단점을 멀티 스레드로 동작할 수 있도록 해주는 모듈
+  - 자동으로 node clustering 해서 네트워크 부하 분산, 멀티 스레드로 활용
+  - pm2 start 파일이름
+  - pm2 stop 파일이름
+  - pm2 start 파일이름 -i 4 (4개의 스레드 활용)
+  - pm2 start 파일이름 -i max (내 PC 풀코어 활용)
 
 #
 
 ### [Note]
 
--
+- MongoDB ORM을 이용할 떄는 mongoose 많이 사용함
+  - 어차피 쿼리를 쓰지 않으므로 MongoDB는 mongoose 사용하는 것이 나음
+  - JS 객체와 MongoDB 스키마 1:1 매핑
 
 #
 
