[ADD] Day 36 - Vue.js + Node.js 01

--- a/boot-camp/note/April/22_04_21_Thu.md
+++ b/boot-camp/note/April/22_04_21_Thu.md
@@ -2,13 +2,19 @@
 
 ## _Vue.js + Node.js_
 
--
+- 한 폴더에 client/server 구성
+  - vue create
+  - server
+- product_category
+  - CRUD 실습
 
 #
 
 ### [Note]
 
--
+- supplier (공급자)
+  - CRUD 화면 구현
+- 다음주 화요일 - supplier, product 파트 실습
 
 #
 
