[ADD] Day 37 - Vue.js + Node.js 02

--- a/boot-camp/note/April/22_04_26_Tue.md
+++ b/boot-camp/note/April/22_04_26_Tue.md
@@ -2,13 +2,17 @@
 
 ## _Vue.js + Node.js_
 
--
+- supplier
+  - create, detail, list 화면 구현 실습
+- product
+  - create, list 화면 구현 실습
 
 #
 
 ### [Note]
 
--
+- 다음 시간
+  - 한 번에 엑셀 파일 업로드하면서 모든 정보 한 번에 DB 등록하는 기법
 
 #
 
