[ADD] Day 38 - Vue.js + Node.js 03

--- a/boot-camp/note/April/22_04_27_Wed.md
+++ b/boot-camp/note/April/22_04_27_Wed.md
@@ -2,13 +2,24 @@
 
 ## _Vue.js + Node.js_
 
--
+- 제품 상세 화면 실습
+- 주문 화면 실습
+  - order, order_detail 테이블에 동시에 데이터 insert
+    - order header
+    - order detail
+- shipper 화면 실습
+  - 엑셀 파일 등록(업로드)하면 data insert
+  - multi edit 해서 excel을 통한 data insert
 
 #
 
 ### [Note]
 
--
+- data rollback
+  - 우선 connection 가져오기
+  - commit
+  - rollback
+- mysql 키워드명으로 테이블 이름 지으면 100% 오류 발생
 
 #
 
