[ADD] Day 39 - The End

--- a/boot-camp/note/April/22_04_28_Thu.md
+++ b/boot-camp/note/April/22_04_28_Thu.md
@@ -2,14 +2,27 @@
 
 ## _부트캠프 마무리_
 
--
+- 이력서 및 자기소개서 포트폴리오 피드백 (ding-co)
+  - 자기소개 간결 5줄 not bad
+  - 경력 및 프로젝트 분리
+  - 스킬(기술 스택)에 대한 상세한 나의 실력 및 가능한 작업 서술
+  - 수상 및 기타 카테고리 분리
+  - 프로젝트 구성
+    - 해결 과제
+    - 역할
+    - 기존 문제에 대한 개선
+    - 주요 기능
+    - 사용 기술
+    - 산출 문서
+    - 얻은 교훈
+    - ...
+  - 화사 가치 관련 포부 및 다짐
+  - 깃헙 커밋 커멘트
+- 질의응답
 
 #
 
 ### [Note]
 
--
-
-#
-
-### [Source Code](https://github.com/ding-co/developer-dignity/tree/main/boot-camp/practice/April/day36)
+- 실무에서 개발 리더의 시간을 줄여주는 것이 매우 중요!
+  - 작업 완료 시 스샷이나 설명 잘 써서 전달 (굳이 들어가서 코드 작동 안볼 정도로)
